2002-10-26  Mark Kettenis  <kettenis@gnu.org>

	* x86-64-tdep.c (x86_64_init_abi): Add calls to override the i386
	target where necessary.  Add more comments and remove the ones
	that don't provide any useful information.

	* i386-tdep.c (i386_frame_saved_pc): Replace call to
	deprecated_read_register_dummy with
	frame_unwind_unsigned_register.

	* i386-tdep.c (i386_extract_struct_value_address): Use
	regcache_raw_read_unsigned instead of
	regcache_cooked_read_unsigned since we know that the register
	we're reading isn't a pseudo register.  Rename variable 'val' into
	the more descriptive 'addr'.

	* x86-64-tdep.c: Fix some formatting problems, mostly in comments.
	(x86_64_push_return_address): Add comment.
	(x86_64_pop_frame): Make static.
	(examine_argument): Clarify comment.
	(x86_64_skip_prologue): Make prolog_expact variable static.

	* dwarf2cfi.c: Fix some formatting problems.
	(context_cpy, read_encoded_pointer): Clarify comments.

	* x86-64-tdep.c (x86_64_breakpoint_from_pc): Constify.
	(x86_64_init_abi): Move set_gdbarch_* calls that overlap with the
	i386 target back into x86_64_gdbarch_init.  Add some comments and
	remove meaningless ones.

2002-10-25  Andrew Cagney  <cagney@redhat.com>

	* complaints.h (struct deprecated_complaint): Rename `struct
	complaint'.
	* complaints.c (complain): Update.
	* remote-vx68.c, remote-vxmips.c, remote-vxsparc.c: Delete
	incorrect comment indicating that "symfile.h" was being included
	for the `struct complaint' definition.
	* remote-vx.c: Update.
	* objc-lang.c: Update.
	* xcoffread.c: Update.
	* hpread.c: Update.
	* mdebugread.c: Update.
	* stabsread.c: Update.
	* dwarf2read.c: Update.
	* dwarfread.c: Update.
	* elfread.c: Update.
	* coffread.c: Update.
	* stabsread.h: Update.
	* dbxread.c: Update.
	* buildsym.c: Update.
	* gdbtypes.c: Update.
	* macrotab.c: Update.

2002-10-25  Mark Kettenis  <kettenis@gnu.org>

	* x86-64-tdep.c (x86_64_gdbarch_init): Make a bit more similar to